c4prj2_input/grade.txt
Grading at Fri Jan  3 02:17:43 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:21:32: error: invalid type argument of ‘->’ (have ‘deck_t {aka struct deck_tag}’)
     for(int j=0; j<fc->decks[i]->n_cards; j++){
                                ^
future.c:22:19: error: invalid type argument of ‘->’ (have ‘deck_t {aka struct deck_tag}’)
       fc->decks[i]->cards[j]->value = deck->cards[i]->value;
                   ^
future.c:23:19: error: invalid type argument of ‘->’ (have ‘deck_t {aka struct deck_tag}’)
       fc->decks[i]->cards[j]->suit = deck->cards[i]->suit;
                   ^
Compilation of future.c failed

Overall Grade: F
